fix(tabs): update scrollbar color for better visibility in tab container

--- a/packages/qwik/src/components/containments/elm-tabs.module.css
+++ b/packages/qwik/src/components/containments/elm-tabs.module.css
@@ -17,7 +17,7 @@
   border-bottom: solid 1px oklch(from var(--elmethis-color-primary) l c h / 30%);
   overflow-x: auto;
   scrollbar-width: thin;
-  scrollbar-color: var(--elmethis-color-primary-weak)
+  scrollbar-color: var(--elmethis-color-neutral-weak)
     var(--elmethis-color-surface-base);
 }
 
